export enum ApplicationMethod {
  DIRECT, WAITINGLIST
}