export enum ExamStatus {
    PENDING, INPROGRESS, FINISHED, ARCHIVED
}