import { Dozent } from "./Dozent";

export class GuestProfessor extends Dozent {

}