import { Dozent } from "./Dozent";

export class Lecturer extends Dozent {

}