import { Exam } from "./Exam";

export class Presentation extends Exam {

}