import { Dozent } from "./Dozent";

export class TeacherForSpecialTasks extends Dozent {

}