import { Exam } from "./Exam";

export class WrittenExam extends Exam {

}