export enum Availability {
    AVAILABLE, NOTAVAILABLE, UNSURE
}