export enum CourseStatus {
  PENDING, STARTED, FINISHED
}