export enum WaitinglistMethod {
  RANDOM, DIRECT
}